2005-03-20  Davyd Madeley  <davyd@madeley.id.au>

	* linux-proc.c: Make the CPU graph work on Linux 2.4 again. Closes
	#170921. Patch by Tommi Komulainen <tommi.komulainen@iki.fi>.

2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>

	* cpuload.c:
	* diskload.c:
	* global.h:
	* load-graph.c: (load_graph_alloc):
	* load-graph.h:
	* loadavg.c:
	* main.c:
	* memload.c:
	* netload.c:
	* properties.c:
	* swapload.c: Clean up compiler warnings and headers.

2005-03-07  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/multiload.xml: Update documentation for GNOME 2.10.

	* docs/C/figures/: Remove old figures, add new preferences figure.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* main.c: Don't leak style while handling the change_background
	signal.  Fix adapted from Vincent Untz's fixes to various panel
	applets.

2005-01-18  Benoît Dejean  <TazForEver@dlfp.org>

	* main.c: (about_cb): Changed my email.

2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>

	* autoscaler.c: (autoscaler_get_max): 1-line cleanup.
	
	* autoscaler.h:
	* global.h:
	* linux-proc.h:
	* load-graph.h:
	* properties.h: G_GNUC_INTERNAL love.

2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>

	* autoscaler.c: (autoscaler_init), (autoscaler_get_max):
	* autoscaler.h: Oops, forgot to add these files.

2005-01-12  Benoît Dejean  <TazForEver@dlfp.org>

	* Makefile.am:
	* autoscaler.[ch]
	* linux-proc.c: (GetDiskLoad), (GetNet): Generic autoscaling for everyone.
	
	* load-graph.c: (load_graph_update):
	* main.c: (about_cb):
	* properties.c: Cleaned, thanks to a better CFLAGS.

2005-01-10  Benoît Dejean  <TazForEver@dlfp.org>

	* linux-proc.c: (GetDiskLoad): Fixed a bit. Need more work and autoscaling.
	Libgtop also has to be fixed.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* multiload.schemas.in: Add default colour for iowait. Choose better
	  colours for read/write disk load.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* main.c: Update to GtkAboutDialog

	* multiload.schemas.in:
	* main.c: