@@ -1,3 +1,9 @@
+2005-05-09  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* Makefile.am:  Added gnome-desktop cflags and libs.
+	* main.c:  (start_procman):  Use startup notification 
+	to launch gnome-system-monitor.
+
 2005-03-20  Davyd Madeley  <davyd@madeley.id.au>
 
 	* linux-proc.c: Make the CPU graph work on Linux 2.4 again. Closes
